--- a/src/app/orbit-list/orbit-list.component.css
+++ b/src/app/orbit-list/orbit-list.component.css
@@ -14,7 +14,12 @@ table {
  margin: 12px 0;
  min-width: 300px;
  background: #dad8d8;
+ 
 }
+
+tr:nth-child(even) {
+	background: lightblue;
+ }
 
 .header-row {
 	background: #34495E;
